tests/ui/closures/2229_closure_analysis/simple-struct-min-capture.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/simple-struct-min-capture.rs:23:17
   |
LL |     let mut c = #[rustc_capture_analysis]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: First Pass analysis includes:
  --> $DIR/simple-struct-min-capture.rs:27:5
   |
LL | /     || {
LL | |
LL | |
LL | |         p.x += 10;
...  |
LL | |     };
   | |_____^
   |
note: Capturing p[(0, 0)] -> Mutable
  --> $DIR/simple-struct-min-capture.rs:30:9
   |
LL |         p.x += 10;
   |         ^^^
note: Capturing p[] -> Immutable
  --> $DIR/simple-struct-min-capture.rs:33:26
   |
LL |         println!("{:?}", p);
   |                          ^

error: Min Capture analysis includes:
  --> $DIR/simple-struct-min-capture.rs:27:5
   |
LL | /     || {
LL | |
LL | |
LL | |         p.x += 10;
...  |
LL | |     };
   | |_____^
   |
note: Min Capture p[] -> Mutable
  --> $DIR/simple-struct-min-capture.rs:30:9
   |
LL |         p.x += 10;
   |         ^^^ p[] captured as Mutable here
...
LL |         println!("{:?}", p);
   |                          ^ p[] used here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
